Update services description - en

--- a/index_en.html
+++ b/index_en.html
@@ -556,32 +556,27 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individual lessons</td>
-                                    <td class="w-50 text-secondary">One-on-one training with a coach, detailed analysis,
-                                        immediate feedback.</td>
+                                    <td class="w-50 text-secondary">Individual training with a coach, detailed analysis and immediate feedback.</td>
                                     <td class="text-end"><span class="price-tag">from 999&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for pairs</td>
-                                    <td class="text-secondary">Training with a coach for two swimmers, motivate each
-                                        other and save money.</td>
+                                    <td class="text-secondary">A coaching session for two swimmers, where you motivate each other and save money at the same time.</td>
                                     <td class="text-end"><span class="price-tag">from 1199&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Group lessons</td>
-                                    <td class="text-secondary">Training for a group of swimmers with similar
-                                        performance.</td>
+                                    <td class="text-secondary">Training for a group of swimmers with a similar skill level.</td>
                                     <td class="text-end"><span class="price-tag">from 1499&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for nonswimmers</td>
-                                    <td class="text-secondary">Special individual lessons for complete beginners,
-                                        children or shy swimmers.</td>
+                                    <td class="text-secondary">Individual lessons for complete beginners, kids, or swimmers who need a bit more confidence.</td>
                                     <td class="text-end"><span class="price-tag">from 1199&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Analysis of the technique</td>
-                                    <td class="text-secondary">Professional video analysis and subsequent style
-                                        correction with a coach.</td>
+                                    <td class="text-secondary">Professional video analysis followed by a detailed technique review with a coach.</td>
                                     <td class="text-end"><span class="price-tag">2999&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -615,28 +610,27 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individual lessons</td>
-                                    <td class="text-secondary">One-on-one with a coach at a pool in Brno.</td>
+                                    <td class="text-secondary">Individual training with a coach, detailed analysis and immediate feedback.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for pairs</td>
-                                    <td class="text-secondary">Training for 2 people with a shared coach.</td>
+                                    <td class="text-secondary">A coaching session for two swimmers, where you motivate each other and save money at the same time.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Group lessons</td>
-                                    <td class="text-secondary">Group training for similar swimmers.</td>
+                                    <td class="text-secondary">Training for a group of swimmers with a similar skill level.</td>
                                     <td class="text-end"><span class="price-tag">from 999&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for nonswimmers</td>
-                                    <td class="text-secondary">Special individual lesson for complete beginners or
-                                        children.</td>
+                                    <td class="text-secondary">Individual lessons for complete beginners, kids, or swimmers who need a bit more confidence.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Analysis of the technique</td>
-                                    <td class="text-secondary">Video analysis and personal feedback with a coach.</td>
+                                    <td class="text-secondary">Professional video analysis followed by a detailed technique review with a coach.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -670,28 +664,28 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individual lessons</td>
-                                    <td class="text-secondary">Personal training with a coach at a pool in Ostrava.</td>
+                                    <td class="text-secondary">Individual training with a coach, detailed analysis and immediate feedback.</td>
                                     <td class="text-end"><span class="price-tag">749&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for pairs</td>
-                                    <td class="text-secondary">Training for 2 people under the supervision of one coach.
+                                    <td class="text-secondary">A coaching session for two swimmers, where you motivate each other and save money at the same time.
                                     </td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Group lessons</td>
-                                    <td class="text-secondary">Training group for colleagues, friends...</td>
+                                    <td class="text-secondary">Training for a group of swimmers with a similar skill level.</td>
                                     <td class="text-end"><span class="price-tag">from 899&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for nonswimmers</td>
-                                    <td class="text-secondary">Individual instruction even for complete beginners!</td>
+                                    <td class="text-secondary">Individual lessons for complete beginners, kids, or swimmers who need a bit more confidence.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Analysis of the technique</td>
-                                    <td class="text-secondary">Video analysis of style and expert consultation.</td>
+                                    <td class="text-secondary">Professional video analysis followed by a detailed technique review with a coach.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -725,27 +719,27 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individual lessons</td>
-                                    <td class="text-secondary">Personal training with a coach at a pool in Olomouc.</td>
+                                    <td class="text-secondary">Individual training with a coach, detailed analysis and immediate feedback.</td>
                                     <td class="text-end"><span class="price-tag">649&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for pairs</td>
-                                    <td class="text-secondary">Training for two that motivates and is fun.</td>
+                                    <td class="text-secondary">A coaching session for two swimmers, where you motivate each other and save money at the same time.</td>
                                     <td class="text-end"><span class="price-tag">699&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Group lessons</td>
-                                    <td class="text-secondary">Group of friends, colleagues or family with a coach.</td>
+                                    <td class="text-secondary">Training for a group of swimmers with a similar skill level.</td>
                                     <td class="text-end"><span class="price-tag">from 799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for nonswimmers</td>
-                                    <td class="text-secondary">Suitable even for complete beginners and children.</td>
+                                    <td class="text-secondary">Individual lessons for complete beginners, kids, or swimmers who need a bit more confidence.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Analysis of the technique</td>
-                                    <td class="text-secondary">Video analysis and personal consultation in Olomouc.</td>
+                                    <td class="text-secondary">Professional video analysis followed by a detailed technique review with a coach.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
@@ -780,28 +774,27 @@
                             <tbody>
                                 <tr>
                                     <td class="service-name">Individual lessons</td>
-                                    <td class="text-secondary">One-on-one with a coach at a pool in Brno.</td>
+                                    <td class="text-secondary">Individual training with a coach, detailed analysis and immediate feedback.</td>
                                     <td class="text-end"><span class="price-tag">799&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for pairs</td>
-                                    <td class="text-secondary">Training for 2 people with a shared coach.</td>
+                                    <td class="text-secondary">A coaching session for two swimmers, where you motivate each other and save money at the same time.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Group lessons</td>
-                                    <td class="text-secondary">Group training for similar swimmers.</td>
+                                    <td class="text-secondary">Training for a group of swimmers with a similar skill level.</td>
                                     <td class="text-end"><span class="price-tag">from 999&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Lessons for nonswimmers</td>
-                                    <td class="text-secondary">Special individual lesson for complete beginners or
-                                        children.</td>
+                                    <td class="text-secondary">Individual lessons for complete beginners, kids, or swimmers who need a bit more confidence.</td>
                                     <td class="text-end"><span class="price-tag">899&nbsp;Kč/hour</span></td>
                                 </tr>
                                 <tr>
                                     <td class="service-name">Analysis of the technique</td>
-                                    <td class="text-secondary">Video analysis and personal feedback with a coach.</td>
+                                    <td class="text-secondary">Professional video analysis followed by a detailed technique review with a coach.</td>
                                     <td class="text-end"><span class="price-tag">2499&nbsp;Kč</span></td>
                                 </tr>
                             </tbody>
